# flaskapp_mlia

./: .coverage  app.py  config.yaml  pyproject.toml  requirements.txt  test_app.py  test_pages.py
.github/workflows/: main.yaml
static/css/: style.css
templates/: index.html
tmp/: insurance_to_predict.csv
