[tool.poetry]
name = "flaskapp"
version = "0.1.0"
description = ""
authors = ["Sylvain <sylvain@zyssman.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
bandit = "^1.7.1"
safety = "^1.10.3"
pandas = "^1.3.4"
bios = "^0.1.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
